tests/reference/asr-test_pow4-ef60978.stderr
semantic error: Only Name, Subscript, and Call supported for now in annotation of annotated assignment.
 --> tests/errors/test_pow4.py:4:5
  |
4 |     a: 2
  |     ^^^^ 
